--- a/package.json
+++ b/package.json
@@ -14,15 +14,18 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@babel/preset-env": "^7.14.2",
-    "babel-loader": "^8.2.2",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.12"
+    "webpack": "^5.37.0",
+    "webpack-cli": "^4.7.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.2",
+    "@babel/preset-env": "^7.14.2",
+    "babel-loader": "^8.2.2",
+    "html-webpack-plugin": "^5.3.1",
+    "json-loader": "^0.5.7",
     "webpack-dev-server": "^3.11.0"
   }
 }
